--- a/2-Flask/Templates/templates/template2.html
+++ b/2-Flask/Templates/templates/template2.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Góðan dag, {{ user.username }}!</h1>
+        <p>Þetta er líka hægt {{ user['username'] }}! </p>
     </body>
 </html>
