--- a/2-Flask/Templates/templates/template2.html
+++ b/2-Flask/Templates/templates/template2.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Góðan dag, {{ user['username'] }} </h1>
-        <p>Þetta {{ user.username }}! virkar í Jinja template en ekki í python, passaðu að ruglast ekki á þessu! </p>
+        <p>Þetta {{ user.username }}! virkar í Jinja template en ekki í python. Passaðu að ruglast ekki! </p>
     </body>
 </html>
