--- a/2-Flask/Templates/templates/include.html
+++ b/2-Flask/Templates/templates/include.html
@@ -1,3 +1,7 @@
-{% include 'header.html' %}
+<html>
+ {% include 'header.html' %}
+ <body>
   <h1>Hi, {{ user.username }}!</h1>
-{% include 'footer.html' %}
+  {% include 'footer.html' %}
+  </body>
+</html>
