--- a/2-Flask/Templates/templates/template2.html
+++ b/2-Flask/Templates/templates/template2.html
@@ -8,6 +8,7 @@
     <body>
         <!-- slaufusvigarnir eru e. placeholders  -->
         <h1>Góðan dag, {{ user['username'] }} </h1>
+        <p>Aldur: {{ user['aldur'] }} ára</p>
         <p>Þetta {{ user.username }}! virkar í Jinja template en ekki í python. Passaðu að ruglast ekki! </p>
     </body>
 </html>
