--- a/2-Flask/Templates/templates/template5.html
+++ b/2-Flask/Templates/templates/template5.html
@@ -15,7 +15,7 @@
       {% if company == "Apple" %}
           <h3>You have an iPhone from {{ company }} </h3>
       {% elif company == "Google" %}
-          <h3>You have a Google phone from {{ company }}</h3>
+          <h3>You have a Android phone from {{ company }}</h3>
       {% else %}
           You have a phone from somewhere else.
       {% endif %}
